CHANGES
=======

2013/07/23 (IBM_DB_SA adapter 0.3.1)
- Add/Fix support for zxjdbc for both IBM DB LUW and AS/400
- Add/Fix support for PyODBC for both IBM DB LUW and AS/400
- Fix reflection for get_lastrowid

2013/03/01 (IBM_DB_SA adapter 0.3.0)
- Add support for LIMIT/OFFSET
- Add support for savepoints
- Add support for double-precision floating-point number
- Fixed reflection for get_view_names and get_view_definition
 
2013/02/06
- Add support for SQLAlchemy 0.7/0.8
- Refactor code layout
- Now supporting "db2://" scheme as well as
  "ibm_db://" for backwards compatibility
- Add/fix support for explicit sequences

 2011/09/27 (IBM_DB_SA adapter 0.2.1):
 - fix reflection problem
 - support alternate DB2 LUW connection via PyODBC
 - support alternate DB2 i5/OS (iSeries) via PyODBC
 - support alternate DB2 i5/OS (iSeries) via ZxJDBC (Jython)

 2011/08/28 (IBM_DB_SA adapter 0.2.0):
 - Support of SQLAlchemy 0.6/0.7
 - Add Jython support

 2008/11/06 (IBM_DB_SA adapter 0.1.6):
 - fixed Metadata not loading any table info (defect #158705)
 - fixed problems while using different schema names (defect #163785)
 - fixed keyerror in length in visit_function (defect #166292)

2008/03/28 (IBM_DB_SA adapter 0.1.5):
 - fixed BIGINT driver return issue #5 (defect #150638)
 - fixed autocommit default issue #6 (defect #156919)
 - fixed _get_exception() tuple issue #8 (defect #156925)
 - fixed create_engine DSN support issue (defect #156930)

2008/02/15 (IBM_DB_SA adapter 0.1.1):
 - fixed .egg setup loading issue #1 (defect #154259)

2008/02/08 (IBM_DB_SA adapter 0.1.0):
 - initial alpha release